# copilot-1.5-demo-pydanticai

./: AGENTS.md  README.md
.cursor/skills/copilotkit-pydanticai-persistence/: SKILL.md
agent/: pyproject.toml
agent/src/: agent.py  db.py  main.py  models.py  seed.py
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/components/: proverbs.tsx
src/lib/: types.ts
